--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: news-agent-backend
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn src.main:app
+    startCommand: python -m gunicorn src.main:app
     plan: free
     envVars:
       - key: PYTHON_VERSION
